<resources>
    <string name="app_name">FinalProject</string>
    <string name="main_menu1">Living Room</string>
    <string name="main_menu2">Kitchen</string>
    <string name="main_menu3">House Setting</string>
    <string name="main_menu4">Automobile</string>
    <string name="main_menu5">Help</string>
    <string name="help_living">Living Room</string>
    <string name="help_kitchen">Kitchen</string>
    <string name="help_house">House</string>
    <string name="help_car">Automobile</string>
    <string name="GarageDoor">Garage Door  </string>
    <string name="garageLight">Garage Light</string>
    <string name="house_Save">Save</string>
    <string name="house_timeinput">Enter time</string>
    <string name="house_tempinput">Enter temperature</string>
    <string name="house_currenttemp">Current Temperature</string>
    <string name="house_mintemp">Min Temperature</string>
    <string name="house_maxtemp">Max Temperature</string>
    <string name="House_Help">House Help</string>
    <string name="house_changetemprature">Edit house temperature</string>
    <string name="house_delete">Delete</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="house_introduction">Introduction</string>
    <string name="house_introductiondetail">Introduction</string>
    <string name="house__garage_text1">Click to open/close garage door</string>
    <string name="house__garage_text2">Click to turn on/off light</string>
    <string name="house_dialog_title">Edit Temperature</string>
    <string name="house_dialog_text">   </string>
    <string name="house_toolbar_title">My House</string>
    <string name="house_ok">OK</string>
    <string name="house_dooropen">Door Opened</string>
    <string name="house_doorclose">Door Closed</string>
    <string name="house_lightopen">Light On</string>


    <string name="house_lightclose">Light Off</string>
    <string name="house_datasave">Data Saved</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="help_house_title">House Help</string>
    <string name="help_house_version">Help for House Setting Version 1.0, by Group3:  Haixia Feng\n</string>
    <string name="help_house_info">
        1,Click the icon of House on the Toolbar, House Setting screen will be displayed with a list
          of Garage, House Temperature and Outside Weather items.\n
        2,Click any of the listed item which you want to set,it will display you the setting screen
          respectively.\n
        3,Following the prompt on each screen,you will set all the settings of house.
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_house_garage">HouseGarage</string>

    <string name="smarthome">Smart Home</string>

    <string name="LivingRoom">Living Room!</string>
    <string name="ControlPanel">Control Panel</string>
    <string name="MoreAppliances">More Appliances Room</string>
    <string name="DataBase">DataBase</string>
    <string name="Exit">Exit</string>



    <string-array name="houseSettingButton_array">
        <item>Garage</item>
        <item>House Temperature</item>
        <item>Outside Weather</item>

    </string-array>

    <string-array name="livingroom_array">
        <item> Lamp1</item>
        <item> Lamp2</item>
        <item> Lamp3</item>
        <item> Television</item>
        <item> Window Blinds</item>
    </string-array>




    <!--
    <string name="title_activity_house_garage">HouseGarage</string> -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_house_garage">HouseGarage</string>


    <string name="help_car_title">Car Help</string>
    <string name="help_car_version">Help for Smart Car Version 1.0, by Group3:Jieli Zhang\n</string>
    <string name="help_car_info">
        1,Click the icon of Car on the Toolbar, Smart Automobile screen will be displayed with a list
          of Temperature, Radio, GPS and Lights items.\n
        2,Click any of the listed item which you want to set,it will display you the setting screen
          respectively.\n
        3,Following the prompt on each screen,you will set all the settings of the car.
    </string>


    <string name="button_negative">NoNoNoNo</string>
    <string name="button_positive">YesYes</string>
    <string name="title_activity_housesetting_detail">HousesettingDetail</string>

    <string name="help_living_title">Living Room Help</string>



    //----------- Strings for kitchen----------------
    <string name="help_kitchen_title">Smart Kitchen Help</string>
    <string name="help_kitchen_version">Help for Smart Kitchen Control Version 1.0, by Group3:Chao Gu\n</string>
    <string name="help_kitchen_info">
        1,Click the icon of SmartKitchen on the Toolbar, Smart Kitchen Control Panel screen will be displayed with a list
          of Appliances.\n
        2,Click any of the appliances which you want to set,it will display you the setting screen
          respectively. As well, click the add button will allow you to add more appliances, the delete button allows you
          to remove a appliance from the list.\n
        3,Following the prompt on each screen,you will set all the settings of the specific appliance.
    </string>

    <string name="kitchen_return">Return</string>
    <string name="kitchen_setting">Setting</string>

    <string name="kitchen_start_add">ADD</string>
    <string name="kitchen_start_delete">DELETE</string>

    <string name="kitchen_microwave_button_reset">Reset</string>
    <string name="kitchen_microwave_button_start">Start</string>
    <string name="kitchen_microwave_button_stop">Stop</string>


    <string name="kitchen_fridge_text_type">Type</string>
    <string name="kitchen_fridge_text_name">Name</string>
    <string name="kitchen_fridge_text_temp">Temperature</string>

    <string name="kitchen_kitchen_light_text_type">Type</string>
    <string name="kitchen_kitchen_light_text_name">Name</string>
    <string name="kitchen_kitchen_light_text_status">Status</string>
    <string name="kitchen_kitchen_light_button_on">ON</string>
    <string name="kitchen_kitchen_light_button_off">OFF</string>

    <string name="help_living_version">Help for Living Room Version 1.0, by Group3:Jie Wang\n</string>
    <string name="help_living_room_info">
        1.Click the icon of LivingRoom on the Toolbar, Living Room screen will be displayed.\n
        2.You can add/delete any of these items, lamp1,lamp2,lamp3,tv and smart window blinds.\n
        3.Click any of the listed item which you want to set,it will display you the setting screen
          respectively.\n
        4.Following the prompt on each screen,you will set all the settings of the living room.

    </string>

    <string name="button_negative">Cancel</string>
    <string name="button_positive">OK</string>

    //------ Car setting strings--------
    <string-array name="carsettings_array">
        <item> Temperature</item>
        <item> Radio</item>
        <item> GPS</item>
        <item> Lights</item>
    </string-array>
    <string name="smartcar">Smart Automobile</string>
    <string name="carexit">Exit</string>
    <string name="headlight">headlight</string>
    <string name="turnon">high</string>
    <string name="turnoff">normal</string>
    <string name="headlights">HeadLights:</string>
    <string name="dimlight">DimLight:</string>
    <string name="carlightssetting">Car Lights Setting</string>
    <string name="volumecontrol">Volume control:</string>
    <string name="radiosetting">Car Radio Setting</string>
    <string name="caradd">ADD</string>
    <string name="addchannel">Add Radio.Channel</string>
    <string name="radioname">Radio Name</string>
    <string name="channel">channel</string>
    <string name="volume">Volume:</string>
    <string name="textmute">mute</string>
    <string name="textoff">Mute</string>
    <string name="texton">On</string>
    <string name="radio_name">Radio Name:</string>
    <string name="radio_channel">Channel:</string>
    <string name="newname">new name</string>
    <string name="newchannel">new channel</string>
    <string name="radioupdate">Update</string>
    <string name="radiodelete">Delete</string>
    <string name="radiocancel">Cancel</string>
    <string name="radiodialog">dialog</string>
</resources>
