<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/action_one"
        android:icon="@drawable/living"

        android:orderInCategory="101"
        android:title="@string/main_menu1"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_two"
        android:icon="@drawable/kitchen"

        android:orderInCategory="122"
        android:title="@string/main_menu2"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_three"
        android:icon="@drawable/house"
        android:orderInCategory="133"
        android:title="@string/main_menu3"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_four"

        android:icon="@drawable/car"
        android:orderInCategory="144"
        android:title="@string/main_menu4"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="155"
        android:title="@string/main_menu5"
        app:showAsAction="never" />

    <item
        android:id="@+id/help_living"
        android:orderInCategory="166"
        android:title="@string/help_living"
        app:showAsAction="never" />
    <item
        android:id="@+id/help_kitchen"
        android:orderInCategory="177"
        android:title="@string/help_kitchen"
        app:showAsAction="never" />
    <item
        android:id="@+id/help_house"
        android:orderInCategory="188"
        android:title="@string/help_house"
        app:showAsAction="never" />
    <item
        android:id="@+id/help_car"
        android:orderInCategory="199"
        android:title="@string/help_car"
        app:showAsAction="never" />


</menu>
