<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/car_lights_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jieli.finalproject.CarLights">

    <ToggleButton
        android:id="@+id/headlight_set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/headlights_text"
        android:layout_alignBottom="@+id/headlights_text"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="28dp"
        android:text="@string/headlight"
        android:textOff="@string/turnoff"
        android:textOn="@string/turnon"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <SeekBar
        android:id="@+id/dimmlight_set"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/dimmlight_text"
        android:layout_alignEnd="@+id/headlight_set" />

    <ProgressBar
        android:id="@+id/light_progress"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="92dp" />

    <TextView
        android:id="@+id/headlights_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/light_progress"
        android:layout_marginStart="46dp"
        android:layout_marginTop="87dp"
        android:text="@string/headlights"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/dimmlight_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/headlights_text"
        android:layout_below="@+id/headlight_set"
        android:layout_marginTop="89dp"
        android:text="@string/dimlight"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/car_lights_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="@android:color/holo_green_light"
        android:gravity="center"
        android:text="@string/carlightssetting"
        android:textColor="@android:color/background_light"
        android:textSize="30sp" />

    <Button
        android:id="@+id/light_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/light_progress"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="64dp"
        android:text="@string/ok"
        android:textSize="24sp" />

</RelativeLayout>
