<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.jieli.finalproject.FridgeActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:rowCount="3"
        android:columnCount="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/kitchen_kitchen_light_text_type"
            android:textSize="18dp"
            android:id="@+id/type"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:id="@+id/type_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/kitchen_kitchen_light_text_name"
            android:id="@+id/name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:id="@+id/name_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/kitchen_kitchen_light_text_status"
            android:id="@+id/status"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:id="@+id/status_text"/>
    </GridLayout>
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/kitchenlight_96"
        android:layout_gravity="center_horizontal"
        android:id="@+id/image"/>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="0.5"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/on"
            android:text="@string/kitchen_kitchen_light_button_on"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:background="#FF0800"
            android:layout_margin="2dp"
            android:layout_weight="1"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/off"
            android:text="@string/kitchen_kitchen_light_button_off"
            android:textStyle="bold"
            android:textColor="#FFFFFF"
            android:textSize="24dp"
            android:background="#FF0800"
            android:layout_margin="2dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setting"
        android:text="@string/kitchen_setting"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:background="#FF0800"
        android:layout_marginTop="5dp"/>


</LinearLayout>
