<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sky"

    android:orientation="vertical">


    <EditText
        android:id="@+id/house_temp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/house_temp_hold"
        android:layout_marginTop="76dp"
        android:backgroundTintMode="screen"
        android:inputType="number"
        android:text=""
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/house_temp_hold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/house_changetemprature"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
         />


    <Button
        android:id="@+id/house_temp_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/house_temp"
        android:text="@string/house_Save"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/house_temp_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/house_temp"
        android:text="@string/house_delete"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />


</RelativeLayout>