<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context="com.jieli.finalproject.FragmentFridge">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:rowCount="3"
        android:columnCount="2">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:text="@string/kitchen_fridge_text_type"
            android:textSize="18dp"
            android:id="@+id/type"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:id="@+id/type_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/kitchen_fridge_text_name"
            android:id="@+id/name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:id="@+id/name_text"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:text="@string/kitchen_fridge_text_temp"
            android:id="@+id/temperature"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:textStyle="bold"
            android:textColor="#000000"
            android:textSize="18dp"
            android:id="@+id/temperature_text"/>
    </GridLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"/>
    <NumberPicker
        android:id="@+id/temperaturePicker"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:background="#FF0800"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/setting"
        android:text="@string/kitchen_setting"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:background="#FF0800"
        android:layout_marginTop="5dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_return"
        android:text="@string/kitchen_return"
        android:textStyle="bold"
        android:textColor="#FFFFFF"
        android:textSize="24dp"
        android:background="#FF0800"
        android:layout_marginTop="5dp"/>


</LinearLayout>
